packages/AICompletion/AICompletion.css
/* ... */
.nsp-container .nsp-content {
  overflow: visible;
  height: var(--nsp-content-height);
}
.civicrm-menu-enabled .nsp-container .nsp-content {
  --nsp-content-height: calc(100vh - 30px - 66px);
  height: var(--nsp-content-height);
}
.is-civicrm-user .nsp-container .nsp-content {
  --nsp-content-height: calc(100vh - 60px - 66px);
  height: var(--nsp-content-height);
}
.is-civicrm-user.civicrm-menu-enabled .nsp-container .nsp-content {
  --nsp-content-height: calc(100vh - 30px - 60px - 66px);
  height: var(--nsp-content-height);
}
.netiaic-chat .msg-tools .handle-btn {
  color: #fff !important;
  border: none !important;
  background: none !important;
}
.shine-btn {
  position: relative;
  overflow: hidden;
}
.shine-btn::before {
  content: "";
  position: absolute;
  top: 0;
  left: -100%;
  width: 100%;
  height: 100%;
  background: var(--shine-effect);
  transition: var(--shine-transition);
}
.shine-btn:hover {
  box-shadow: var(--btn-shadow);
}
.shine-btn:hover::before {
  left: 100%;
}
.netiaic-container .copy-btn.is-copied::after {
  content: "\f26b";
  margin-left: 5px;
  font-family: 'Material-Design-Iconic-Font';
  font-size: 20px;
  color: #CDDC39;
}
.netiaic-chat {
  min-height: 150px;
  max-height: calc(var(--nsp-content-height) - var(--netiaic-form-height));
  overflow-y: auto;
  padding: 20px;
  background: #a0aab3;
}
.netiaic-chat .msg {
  display: flex;
  flex-wrap: wrap;
  position: relative;
  margin: 0 0 24px 0;
}
.netiaic-chat .msg-avatar {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-right: 8px;
  width: 32px;
  height: 32px;
  color: #fff;
  border-radius: 50%;
  background: #304ffe;
  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, .3);
}
.netiaic-chat .user-msg .msg-avatar {
  background: #f48fb1;
}
.netiaic-chat .msg-avatar i {
  color: #fff;
  font-size: 20px;
}
.netiaic-chat .msg-tools {
  display: none;
  margin: 10px 0 0 0;
  padding: 0;
  list-style: none;
}
.netiaic-chat .msg-tools .handle-btn {
  margin: 0;
  padding: 0;
  line-height: 20px;
  color: #fff;
  background: none;
}
.netiaic-chat .msg-tools .handle-btn i {
  color: #fff;
}
.netiaic-chat .msg.is-finished .msg-tools,
.netiaic-chat .msg.is-error .msg-tools {
  display: flex;
  flex: 0 0 100%;
  justify-content: flex-end;
  gap: 5px 25px;
}
.netiaic-chat .msg-content {
  flex: 0 0 calc(100% - 40px);
  padding: 16px;
  background: #fff;
  border-radius: 8px;
  border-top-left-radius: 0;
  box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
}
.netiaic-chat .user-msg .msg-content {
  background: #eceff1;
}
.netiaic-chat .msg .msg-tip {
  display: none;
}
.netiaic-chat .msg.msg.is-finished .msg-tip i {
  font-size: 18px;
  color: #fff;
}
.netiaic-chat .msg.msg.is-finished .msg-tip {
  display: flex;
  align-items: center;
  position: absolute;
  bottom: 0;
  left: 0;
  margin-left: 40px;
  width: calc(100% - 100px);
  font-size: .75rem;
  color: transparent;
  background-clip: text;
  -webkit-background-clip: text;
  background-image: linear-gradient(-45deg, #fff 45%, rgba(255, 255, 255, .5) 50%, #fff 55%);
  background-size: 250% 100%;
  animation: text-shiny 5s both infinite;
}
html[lang="en"] .netiaic-chat .msg.msg.is-finished .msg-tip {
  font-size: .75rem;
}
.netiaic-chat .error-msg {
  color: var(--color-error);
}
.netiaic-chat .error-msg .msg-content {
  background: var(--bg-color-error);
}
@keyframes text-shiny {
  0% {
    background-position: 100% 100%;
  }
}
.netiaic-container .netiaic-form-container .crm-section {
  display: flex;
  padding: 0;
  margin: 0 0 16px 0;
}
.netiaic-container .crm-section > .crm-form-elem {
  flex: 0 0 100%;
}
.netiaic-container .crm-section > .label {
  flex: 0 0 20%;
  margin: 0;
}
.netiaic-container .crm-section > .label label {
  margin: 0;
}
.netiaic-container .crm-section > .content {
  flex: 0 0 80%;
  margin: 0;
  padding: 0 0 0 10px;
  max-width: 80%;
  font-size: .875rem;
}
.netiaic-container .crm-section.is-error .form-text,
.netiaic-container .crm-section.is-error .form-textarea,
.netiaic-container .crm-section.is-error .form-select,
.netiaic-container .crm-section.is-error .select2-container--default .select2-selection--single {
  border-color: var(--color-error);
}
.netiaic-form-container {
  max-height: var(--netiaic-form-height);
}
.netiaic-form-container > .inner {
  max-height: var(--netiaic-form-height);
  padding: 15px 20px;
}
.netiaic-form-container .crm-form-elem {
  max-width: 100%;
  width: 100%;
}
.netiaic-form-container .crm-form-elem .description {
  font-size: .8125rem;
  margin: 0;
}
.netiaic-form-container .crm-form-elem .description.is-error {
  color: var(--color-error);
}
.netiaic-container .netiaic-use-tpl {
  display: flex;
  margin: 0 0 12px 0;
  padding: 10px 0 10px 30px;
  list-style: none;
  font-size: .875rem;
  background: url(images/icon--magic.svg) no-repeat 0 50%;
}
.netiaic-container .netiaic-use-tpl > li {
  display: flex;
  align-items: center;
  line-height: 1;
}
.netiaic-container .netiaic-use-tpl > li:not(:last-child) {
  margin-right: 10px;
  padding-right: 10px;
  border-right: 1px solid #bdbdbd;
}
.netiaic-use-tpl li {
  list-style: none;
}
.netiaic-modal {
  position: relative;
  margin: 40px auto;
  max-width: 90%;
  background: #fff;
}
.netiaic-modal-header {
  display: flex;
  justify-content: space-between;
  padding: 15px 20px;
}
.netiaic-modal-title {
  font-size: 1.5rem;
}
.netiaic-modal-close {
  padding: 0;
  font-size: 30px;
  cursor: pointer;
  border: 0;
  background: none;
}
.netiaic-modal-content {
  padding: 15px 20px;
}
.netiaic-modal .modal-tabs {
  margin: 0;
  padding: 0;
  border: 0;
}
.netiaic-modal .modal-tabs-menu {
  margin: 0 -20px;
  padding: 0 30px;
  border: none;
  background: #eee;
}
.netiaic-modal .modal-tabs-menu::after {
  display: block;
  position: relative;
  z-index: 10;
  margin: 0 -30px;
  height: 2px;
  background: #fff;
}
/* ... */

